lab1/Test/L1-A-9-12.output
Error Type B at Line 10
Error Type B at Line 22
Error Type B at Line 38
Error Type B at Line 45
