lab1/Test/L1-A-9-12.cmm
float oVMz6T7NQfE5MhR [ 515931555 ] , Gu 

;
int vt ( ) {
  int PAd_vwXzmpE , bDDN_2u7bbZiVZo8 = phwGFVu_S04Nhv 
    = qpvRijDSDz_ / - q6ouwfbMj5PRT [ F || VM3yf2uZIHqCnKC_Q 
    && uLDR1UUALIwDLgN0Rkni < ym7r + ! ! ( KtR2nEeWh3l 
    || WZj8E2tt3WVspRN >= dc - C0bjepbYLT1MVib38 * wWemnGz 
    ( j5vYAyhklFfaI = y_LBxIfH6BBOuXDLcb = FUd9z55dRHCIeCz4 
    || p31m == T + * jeL9r [ kgS_ZQ0nctQUbzBk || hS44yqJeSk 
    != rb53xdwfWHliJvJ3 / h_qCNbUR6vXty37zok [ LFZ6H1yxtC 
    || eBLaXGE7cwufjTM1 == exNpptELYPedcVrw - ( nDyyE 
    / i [ FJHsaXeiBIuBTolt = RN3 = R < KF59KN8sF_H6 - 
    uXha_UnzH9Fwl [ eOnM_WhZmYJvpEiOc || pBgIj_H2blmobZn 
    / FtMQYViL6Iu5mGWPpfao ( uxbjAGIsAQ1F5 , M9GLrC1Fcn 
    ) ] ] ) * ! - ( b0AWJXlODyD5uXhKS == a ) > RC8tsbuFmzeuO2m5wQ7 
    + mLoKfTVSmasICG5Ov + 476820432.1806721714 ] . J_ 
    ] <= 1069838240 . JteKIsbwf3k . BNdEhyJ * pFSuTOH2YOE2Ws1j5ge 
    + - Wic3 ( ) . JjZX5Hc ) ) ] ;
}
struct ME0X9IbDWi2Bi ;
struct M n struct lXLTH89Dq SN ) {
  int jgTVLZI096hSwFSU ;
  int h7PMQLSdz4qb ;
  int ZT4nwK ;
  struct kipuokz7x5yy__w eB23isopxeFdG ;
  struct VMjwR7vgarrHdxB1 A9afONVj3AIpBS ;
  while ( ZrthEySD48ZpB )   if ( WBC ) {
    struct x9tQi {
    }pAzg0i ;
  }else   return pbJ65zjDM41 ;


  if ( h6RTr5eW6iP4 )   NqDraK5vkO4B ;

}
int ;
int jPm6hSJT ( {
  if ( Je5ENM6ZIZWyHL )   while ( DtBdyNSlgq )   rZgk5cSnoR 
    ;

else   bkGFlIxQd5UBPMDytmF ;

  if ( RdCJk8PNrPPGZwz )   if ( wEJZeaHN5HdqZfyZ5eu 
    )   while ( Um )   while wYb )   Z6QXL ;


else   while ( WknFsXFL7f )   zOPlxdBrKMqcFXylI ;


else   SSK1YMPVF7j4jCuZKx ;

  if ( n30x5J1mD8OSa1CIP38 )   nQb6BUzC5 ;

  if ( qJ_VTUCPQ3UrxWO6ml2M )   if ( dqQu0 )   MOhJ_41e 
    ;
else   S0 ;

else   if ( zWghu36uCNp8ghkT3j8A )   while ( I0WcDXMrGKkWKKT 
    )   UiNen ;



}
int ;
int tjIUkuQBZcnh ( int S , int Hu1Rq ) {
}
struct {
  int KA151GADj ;
  int ZSMxG5LgIGqId ;
};
struct HFa18xXgVBWDAT5Z ;
